Make symfony/dependency-injection optional.

--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,12 @@
     "guzzlehttp/guzzle": "^6.2",
     "psr/cache": "^1.0",
     "cache/array-adapter": "^0.4.0",
-    "symfony/dependency-injection": "^3.0",
-    "hendricha/tagpass": "dev-master",
-    "symfony/config": "^3.0"
   },
+  "suggest": {
+    "symfony/dependency-injection": "Allows the use of a dependency injection container with TheSportsDb.",
+    "hendricha/tagpass": "Required in combination with symfony/dependency-injection when using the default_bootstrap.php",
+    "symfony/config": "Required in combination with symfony/dependency-injection when using the default_bootstrap.php"
+  }
   "license": "GPL-3.0+",
   "authors": [
     {
