Fix Symfony DIC

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,10 @@
     "fastnorth/property-mapper": "^0.0.4"
   },
   "suggest": {
-    "symfony/dependency-injection": "Allows the use of a dependency injection container with TheSportsDb."
+    "symfony/dependency-injection": "Allows the use of a dependency injection container with TheSportsDb.",
+    "hendricha/tagpass": "Required in combination with symfony/dependency-injection when using the default_bootstrap.php",
+    "symfony/config": "Required in combination with symfony/dependency-injection when using the default_bootstrap.php",
+    "symfony/yaml": "Required in combination with symfony/dependency-injection when using the default_bootstrap.php"
   },
   "license": "GPL-3.0+",
   "authors": [
