--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,11 +1,62 @@
 checks:
-    php: true
+  php:
+    use_self_instead_of_fqcn: true
+    uppercase_constants: true
+    simplify_boolean_return: true
+    return_doc_comments: true
+    return_doc_comment_if_not_inferrable: true
+    remove_extra_empty_lines: true
+    properties_in_camelcaps: true
+    prefer_while_loop_over_for_loop: true
+    parameters_in_camelcaps: true
+    parameter_doc_comments: true
+    param_doc_comment_if_not_inferrable: true
+    optional_parameters_at_the_end: true
+    no_short_variable_names:
+      minimum: '2'
+    no_short_method_names:
+      minimum: '3'
+    no_long_variable_names:
+      maximum: '25'
+    no_goto: true
+    newline_at_end_of_file: true
+    naming_conventions:
+      local_variable: '^[a-z][a-zA-Z0-9]*$'
+      abstract_class_name: ^Abstract|Factory$
+      utility_class_name: 'Utils?$'
+      constant_name: '^[A-Z][A-Z0-9]*(?:_[A-Z0-9]+)*$'
+      property_name: '^[a-z][a-zA-Z0-9]*$'
+      method_name: '^(?:[a-z]|__)[a-zA-Z0-9]*$'
+      parameter_name: '^[a-z][a-zA-Z0-9]*$'
+      interface_name: '^[A-Z][a-zA-Z0-9]*Interface$'
+      type_name: '^[A-Z][a-zA-Z0-9]*$'
+      exception_name: '^[A-Z][a-zA-Z0-9]*Exception$'
+      isser_method_name: '^(?:is|has|should|may|supports)'
+    more_specific_types_in_doc_comments: true
+    line_length:
+      max_length: '180'
+    function_in_camel_caps: true
+    fix_use_statements:
+      remove_unused: true
+      preserve_multiple: false
+      preserve_blanklines: false
+      order_alphabetically: true
+    fix_line_ending: true
+    encourage_single_quotes: true
+    encourage_postdec_operator: true
+    classes_in_camel_caps: true
+    avoid_todo_comments: true
+    avoid_perl_style_comments: true
+    avoid_multiple_statements_on_same_line: true
+    avoid_fixme_comments: true
+    align_assignments: true
+
 filter: {  }
 coding_style:
-    php:
-        indentation:
-            general:
-                size: 2
-        spaces:
-            around_operators:
-                concatenation: true
+  php:
+    indentation:
+      general:
+        size: 2
+    spaces:
+      around_operators:
+        concatenation: true
