--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,8 @@
   "autoload": {
     "psr-4": {"TheSportsDb\\": "src/"}
   },
-  "minimum-stability": "dev"
+  "minimum-stability": "dev",
+  "require-dev": {
+    "phpunit/phpunit": "^5.5"
+  }
 }
