--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
   },
   "minimum-stability": "dev",
   "require-dev": {
-    "phpunit/phpunit": "^5.5"
+    "phpunit/phpunit": "^5.5",
+    "psr/log": "^1.0"
   }
 }
