--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
   "minimum-stability": "dev",
   "require-dev": {
     "phpunit/phpunit": "^5.5",
-    "psr/log": "^1.0"
+    "psr/log": "^1.0",
+	"codeclimate/php-test-reporter": "dev-master"
   }
 }
