--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -60,3 +60,11 @@ coding_style:
     spaces:
       around_operators:
         concatenation: true
+build:
+    tests:
+        override:
+            -
+                command: 'phpunit --coverage-clover build/logs/clover.xml'
+                coverage:
+                    file: 'build/logs/clover.xml'
+                    format: 'clover'
