--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
   "require-dev": {
     "phpunit/phpunit": "^5.5",
     "psr/log": "^1.0",
-	"codeclimate/php-test-reporter": "dev-master"
+	"codeclimate/php-test-reporter": "dev-master",
+	"codacy/coverage": "dev-master"
   }
 }
