--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
   "type": "library",
   "require": {
     "guzzlehttp/guzzle": "^6.2",
-    "fastnorth/property-mapper": "^0.0.4"
+    "fastnorth/property-mapper": "^0.0.4",
+    "php": "^5.6 || ^7.0"
   },
   "suggest": {
     "symfony/dependency-injection": "Allows the use of a dependency injection container with TheSportsDb.",
