--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,5 @@ php:
   - nightly
 before_script:
   - composer install
+after_script:
+  - php vendor/bin/codacycoverage clover build/logs/clover.xml
